--- a/main.scss
+++ b/main.scss
@@ -1,17 +1,25 @@
 
-
-
-
+body, html {
+     overflow: hidden;
+}
 
 //bank-pad style 
+.bank-container {
+     position: relative;
+     width: 100%;
+     height: 100%;
+   
+     z-index: 2;
+}
 .btn{
     border: 3px solid #1a1a1a;
+    color:white;
     display: inline-block;
-    padding: 10px;
+    padding: 5px 10px;
     position: relative;
     text-align: center;
     transition: background 600ms ease, color 600ms ease;
-}
+};
 
 input[type="radio"].toggle {
     display: none;
@@ -32,7 +40,7 @@ input[type="radio"].toggle {
             width: 100%;
             z-index: -1;
         }
-    }
+    };
     &.toggle-left + label {
         border-right: 0;
         &:after{
@@ -63,58 +71,79 @@ input[type="radio"].toggle {
 //volume slider style 
 
 
+// display style
+
   
-  #volume-slider{
-    align-items: center;
-    display    : flex;
-    // margin     : 3em auto;
-    padding    : 30px 0;
-    width      : 265px;
+  //drum pad style 
+
+  .drum-pad {
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       font-size: 2em;
+       border-radius: 8px;
+    
   }
-  
-  
-  .volume-icon{
-    cursor          : pointer;
-    height          : 60px;
-    transform       : rotate(-0deg);
-    transform-origin: center left;
-    width           : 60px;
-  
-    .volume-icon-bg{
-      fill      : #100100;
-      transition: fill 300ms;
-    }
-  
-    &:hover .volume-icon-bg{
-      fill: #b6aebf;
-    }
-  
+
+
+  //app style 
+ 
+  .app-wrapper {
+       width:100vw;
+       height: 100vh;
+       background:#073b4c ;
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       .app-container {
+        border: 4px solid goldenrod;
+        padding: 2em;
+        background:#9BC4BC;
+        min-width: 580px;
+      
+       }   
+
+       .app-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center ;
+       }
+       
+       .pad-wrapper {
+           width: 50%;
+           display: grid;
+           grid-template-columns: repeat(3,1fr);
+           gap: .4em;
+        //    background: #9BC4BC;
+            .drum-pad {
+                margin:.2em;
+        }
+ 
+       }
+       .function-wrapper {
+           width: 50%;
+           .volume-slider {
+                margin:2em 0;
+           }
+           .sound-control {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            // width: 100%;
+
+            .bank-container {
+                 margin-left: 2em;
+                
+            }
+ 
+        }
+       }
+
+      
+
+       
   }
+
+
+
   
-  
-  #circle-mask-shape{
-    transform       : scale(0);
-    transform-origin: center center;
-  }
-  
-  
-  .volume-track{
-    background-color: #e1dee5;
-    border-radius   : 3px;
-    flex            : 1;
-    height          : 4px;
-    margin-left     : 5px;
-    position        : relative;
-  }
-  
-  
-  .volume-indicator{
-    background-color: #6eaa35;
-    border-radius   : 50%;
-    height          : 12px;
-    left            : 0;
-    position        : absolute;
-    top             : -4px;
-    transition      : visibility 100ms, opacity 100ms;
-    width           : 12px;
-  }
