--- a/main.scss
+++ b/main.scss
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap');
+
 
 body, html {
      overflow: hidden;
+     font-family:Luxurious Roman;
 }
 
 //bank-pad style 
@@ -8,12 +11,11 @@ body, html {
      position: relative;
      width: 100%;
      height: 100%;
-   
      z-index: 2;
 }
 .btn{
     border: 3px solid #1a1a1a;
-    color:white;
+    // color:white;
     display: inline-block;
     padding: 5px 10px;
     position: relative;
@@ -136,10 +138,7 @@ input[type="radio"].toggle {
  
         }
        }
-
-      
-
-       
+   
   }
 
 
